--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ gunicorn = "*"
 scipy = "*"
 numpy = "*"
 pandas = "*"
+flask-sqlalchemy = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.7"
