--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ flask-sqlalchemy = "*"
 psycopg2 = "*"
 python-decouple = "*"
 scikit-learn = "*"
+scipy = "*"
 
 [requires]
 python_version = "3.7"
